# qt_MusicPlayer

./: CMakeLists.txt  main.cpp  musicplayer.cpp  musicplayer.h  musicplayer.ui
